Fix 'Associations connected to the component port do not move when moving the component'

The ComponentWidget class requires an implementation of
adjustUnselectedAssocs() to update the associations attached to the ports.
To do this, UMLWidget::adjustUnselectedAssocs() must be converted to a
virtual method.

BUG:403692
FIXED-IN:2.27.2 (KDE Applications 18.12.2)